# fastapi-server-example

./: .env  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/application/commands/: user_commands.py
app/application/di/: container.py  factory.py
app/application/event_bus/: event_bus.py
app/application/event_handlers/: user_event_handlers.py
app/application/queries/: query_factory.py  user_queries.py
app/application/services/: readme.MD  user_service.py
app/bootstrap/: config.py  middleware.py  readme.MD  router.py  startup.py
app/bootstrap/container/: container.py  factory.py  readme.MD
app/core/: enum.py  exception.py  vresponse.py
app/domain/: user.py
app/domain/aggregates/: user.py
app/domain/entities/: company.py
app/domain/events/: base.py  user_events.py
app/domain/exceptions/: user_exceptions.py
app/domain/interfaces/: distributed_lock.py
app/domain/services/: base_service.py  user_service.py
app/domain/value_objects/: email.py  person_name.py
app/infra/db/: session.py
app/infra/models/: __init__.py  user.py
app/infra/repository/: user_repository.py
app/infrastructure/cache/: memory_provider.py  redis_provider.py
app/infrastructure/config/: __init__.py  logging_config.py  settings.py
app/infrastructure/database/: engine.py  session.py
app/infrastructure/distributed_lock/: example.py  (+1 more)
app/models/: __init__.py  user.py
app/schemas/: user.py
app/service/: user_service.py
app/web/: application.py
(+41 files in other folders)
